# MusicServer

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  main.c  readme.md
inc/: cmd.h  db.h  errors.h  files.h  global_cfg.h  music.h  server.h  server_commands.h
resources/: test_file_lst.txt
src/: cmd.c  db.c  files.c  global_cfg.c  music.c  server.c  server_commands.c
